# RFC

./: .gitignore  README.md  pyproject.toml
data/frameworks/: defense_aerospace.json  semiconductor_fabless.json
src/: __init__.py  cli.py  config.py  db.py
src/frameworks/: __init__.py  base.py  manager.py  validator.py
src/generator/: assembler.py  profiler.py  prompts.py  qa.py  writer.py
src/output/: docx_export.py  html_export.py  markdown.py  pdf_export.py
src/research/: __init__.py  citations.py  financial.py  macro.py  news.py  peers.py
src/ui/: __init__.py
tests/: test_citations.py  test_frameworks.py  test_generator.py  test_qa.py
