[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-report-framework"
version = "0.1.0"
description = "Investment Report Framework Creator - sector-specific investment analysis frameworks"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Catacan"}
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
api = ["anthropic>=0.40"]
finance = ["yfinance>=0.2"]
docx = ["python-docx>=1.0"]
pdf = ["weasyprint>=60.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "anthropic>=0.40",
    "yfinance>=0.2",
    "python-docx>=1.0",
]

[project.scripts]
irf = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
